amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-nullable.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-nullable.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 5

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type '[null]' from field 'valid' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-nullable.api.graphql#/declares/valid2/shape/default-node
  Property: http://www.w3.org/ns/shacl#property
  Range: [(6,18)-(6,41)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-default-value-type-directive
  Message: Expecting 'String' value but got 'null' value instead
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-nullable.api.graphql#/declares/invalid1/shape/default-node
  Property: http://www.w3.org/ns/shacl#defaultValue
  Range: [(9,39)-(9,43)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-default-value-type-directive
  Message: Expecting 'list' value but got 'null' value instead
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-nullable.api.graphql#/declares/invalid2/shape/default-node
  Property: http://www.w3.org/ns/shacl#defaultValue
  Range: [(10,41)-(10,45)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type '[null]' from field 'invalid' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-nullable.api.graphql#/declares/invalid3/shape/default-node
  Property: http://www.w3.org/ns/shacl#property
  Range: [(11,20)-(11,47)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-default-value-type-directive
  Message: Expecting 'String' value but got 'null' value instead
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-nullable.api.graphql#/declares/invalid3/shape/default-node
  Property: http://www.w3.org/ns/shacl#defaultValue
  Range: [(11,42)-(11,46)]
  Location: 
